<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="wrap_content"
        android:layout_height="191dp"
        android:layout_above="@id/cityFinder"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="383dp"
        android:contentDescription="@string/Todo"
        app:srcCompat="@drawable/finding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cityFinder"
        android:layout_marginBottom="38dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/_0_c"
            android:textColor="#070707"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="30dp"
            android:text="@string/n"
            android:textColor="#030304"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="30dp"
            android:text="@string/fetching"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cityFinder"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/buttondesign">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/enterlocation"
            android:textColor="#DFE6E6"
            android:textColorHighlight="#DAD5D5"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>